--- a/app.json
+++ b/app.json
@@ -4,5 +4,5 @@
 	"repository": "https://github.com/technomile/Heroku-OpenCart-MySQL",
 	"logo": "http://technomile.github.io/img/cms_buildpack_github.png",
 	"keywords": ["opencart", "heroku", "php", "mysql", "apache", "apache2", "nginx"],
-	"addons": ["cleardb:ignite","newrelic:wayne","sendgrid:starter","logentries:TryIt"]
+	"addons": ["cleardb:ignite","newrelic:wayne","sendgrid:starter"]
 }
